--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Leaflet Step-1</title>
+  <title>EarthQuakes</title>
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
 
   <!-- Our CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="stylesheet" href="https://cdn.rawgit.com/socib/Leaflet.TimeDimension/master/dist/leaflet.timedimension.control.min.css" />
+
 </head>
 <body>
 
   <!-- The div that holds our map -->
   <div id="map"></div>
+
+  <!-- changing the background color of the layer control -->
+  <style>.leaflet-control-layers-expanded { background: #000000; color: #808080}</style>
+  <!-- API key -->
+  <script type="text/javascript" src="static/js/config.js"></script>
 
   <!-- Leaflet JavaScript -->
   <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
